asu_dir 7.x-1.7.2 2017-09-06
----------------------------
- Fixed bug where employee types filter was broken

asu_dir 7.x-1.7.1 2017-06-23
----------------------------
- Fixes bug where page state title was being set as null
- Hides pagination if only one page of results
- Fixed CSS which was hindering the directory pane from going completely full-width inside of its container
- Bugfixes for history state handling, which was causing asu_dir higher index tab states to not be saved if there
had been non-asu_dir panes placed before them
- Cleaned up some of the js code and logic
- Fixed the default photo behavior for the ASU Directory field

asu_dir 7.x-1.7 2017-04-24
--------------------------
- added checking for null node aliases when building profile urls, which will fall back to the node/% path if no alias
exists for a given profile node
- fallback to custom title if workingtitle is selected, and null
- added examples of common custom Solr queries to ASU Directory field form
- added logic to hide the 'breadcrumbs' option on the ASU Directory field form, when the show tree option is unselected
- locked down the tab state history handling to only the asu_dir Solr-enabled panes, to avoid conflicts with LID directory
view listings and weird state behavior
- added ability to select multiple departments via the ASU Dept Picker

asu_dir 7.x-1.6.1 2017-03-16
----------------------------
- if a directory tree is shown for a listing, the title displayed will be the person's title in the current dept,
otherwise, the primary title is shown

asu_dir 7.x-1.6, 2017-02-17
---------------------------
- Added support for full integration with ASU Local iSearch Directory (ASU LID) module
- Form fields and directory will now respect ASU LID-style expertise and local tag settings, if applicable
- Solr Health Check fallback added. If ASU LID is enabled, and Solr is down, the directory display will fall
back to ASU LID profile view