@@ -2,5 +2,5 @@ name = "ASU Directory Utilities"
 core = 7.x
 package = ASU
 description = "Utilities useful for gathering data from iSearch and Solr."
-version = 7.x-1.1
+version = 7.x-1.2
 
