@@ -1,3 +1,7 @@
+asu_dir_utilities 7.x-1.2
+-------------------------
+- added default config for displaying department
+
 asu_dir_utilities 7.x-1.1
 -------------------------
 - long term caching functions for tree and employee types
